Correct covid bar

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -475,3 +475,34 @@
 .site-evenements a:hover {
   color:#add6d2;
 }
+
+.site-navigation .nav-item:last-child {
+    margin-left: 0px;
+}
+
+@media(max-width:767px){
+  .site-project-header {
+      padding: 170px 0 80px;
+  }
+}
+
+@media(max-width:575px){
+  .site-contact {
+      padding: 180px 0 100px;
+  }
+}
+
+@media (max-width: 575px){
+  .site-blog-header {
+      padding: 180px 0 100px;
+  }
+}
+
+@media (max-width: 575px){
+  .site-blog.details {
+      padding: 180px 0 100px;
+  }
+}
+
+
+site-blog details
