--- a/themes/roxo/layouts/partials/footer.html
+++ b/themes/roxo/layouts/partials/footer.html
@@ -72,3 +72,11 @@
 <script src="{{ $vendor.Permalink }}"></script>
 {{ $script := resources.Get "js/script.js" | minify }}
 <script src="{{ $script.Permalink }}"></script>
+
+<!-- Zenchef Widget SDK -->
+<script>;(function (d, s, id) {const el = d.getElementsByTagName(s)[0]; if (d.getElementById(id) || el.parentNode == null) {return;} var js = d.createElement(s);  js.id = id; js.async = true; js.src = 'https://sdk.zenchef.com/v1/sdk.min.js';  el.parentNode.insertBefore(js, el); })(document, 'script', 'zenchef-sdk')</script>
+<div
+   class="zc-widget-config"
+   data-restaurant="374522"
+   data-open="2000"></div>
+
